- SCM fallback hardening:
- When `git` commands are unavailable/failing, adapter now parses native `.git` reference material (`HEAD`, loose refs, packed-refs) deterministically for source evidence.
- SCM strict route now fails closed on partial git/native-ref/status metadata, preventing partial SCM evidence from being treated as complete explicit SCM analysis.
- Image adapter extraction deepened:
- Deterministic header evidence now includes ISO PVD, VHD footer, VHDX signature, QCOW2 magic/version, and VMDK descriptor/sparse-magic hints.
- Explicit ISO route now requires both primary volume descriptor and descriptor-set terminator evidence, preventing PVD-only placeholders from passing strict image routing.
- Explicit image route now requires minimum structural byte-size evidence for `qcow2` and `vhdx` beyond magic/signature bytes, preventing tiny signature-only files from passing strict image analysis.
- Explicit image route now requires minimum structural byte-size evidence for `vhd` beyond footer marker bytes, preventing tiny footer-only files from passing strict image analysis.
- Explicit image route now requires minimum descriptor size for descriptor-only `vmdk` analysis, preventing tiny placeholder descriptors from passing strict image routing.
- Package/installer signing evidence deepened:
- Deterministic local signing hints now include PE cert-table presence for `.exe` and signature-entry hints for `.msix/.nupkg/.whl/.jar`.
- New package reason code support: `PACKAGE_SIGNING_INFO_PRESENT` alongside existing unavailable paths.
- Container scan now emits adapter metadata/signals plus adapter artifacts using the same deterministic contract as safe-run adapters.
- Container scan evidence remains local-only inspect data and excludes unstable fields (timestamps/raw env/path values).
- Container scan now requires immutable image digest refs (`name@sha256:...` or `sha256:...`) and fails closed on mutable tag refs.